# Deep-time-it

./: .gitignore  LICENSE  README.md  TimeInspect.py  __init__.py  deep_timeit.py  pyproject.toml  requirements.txt  setup.py  test.py
src/: deep_timeit.py
tests/: test.py
tests/subtests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
