[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_timeit"
version = "1.1.0"
authors = [
  { name="Oliver Gibson", email="ojrgibson@perse.co.uk" },
]
description = "A package that allows timing of each individual line of code in a function, and produces a colour-coded output"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Yetiowner/Deep-time-it"
"Bug Tracker" = "https://github.com/Yetiowner/Deep-time-it/issues"